общие мелочи в верстке

--- a/ea-vkks-web/src/main/webapp/index.html
+++ b/ea-vkks-web/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/fonts.css">
+    <link rel="stylesheet" href="resources/css/clear.css">
 
     <title>Earh</title>
 
